--- a/src/Pages/Frank’s Daily Records/Frank’s Daily Records.css
+++ b/src/Pages/Frank’s Daily Records/Frank’s Daily Records.css
@@ -3,7 +3,7 @@
     display: flex;
   }
   body{
-background-image: url("../../../public/Images/Group\ 2\ \(1\).png");
+background-image: url("../../Images/Group\ 2\ \(1\).png");
 background-position: center;
 background-size: 50%;
 background-repeat: no-repeat;
