--- a/src/Components/SIdebar/Sidebar.css
+++ b/src/Components/SIdebar/Sidebar.css
@@ -34,7 +34,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    height: 728px;
+    height: 70%;
     width: 252px;
     background: #0A2525;
     color: #fff;
