--- a/src/Pages/Users/Users.css
+++ b/src/Pages/Users/Users.css
@@ -98,4 +98,15 @@
     color: #154a4a !important;
     font-family: 700 !important;
   }
-  
+  .delete-btn {
+    background-color: #dc3545; /* Bootstrap's danger color */
+    color: white;
+    border: none;
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+  }
+  .delete-btn:hover {
+    background-color: #c82333; /* Darker shade on hover */
+  }
