--- a/src/Pages/Employees Records/EmployeesRecords.css
+++ b/src/Pages/Employees Records/EmployeesRecords.css
@@ -98,4 +98,29 @@
     color: #154a4a !important;
     font-family: 700 !important;
   }
+  .filter-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+    gap: 10px;
+  }
   
+  .filter-container label {
+    font-size: 1.2em;
+    margin-right: 10px;
+    color: #555;
+    font-weight: bold;
+  }
+  
+  .filter-container .react-datepicker-wrapper {
+    display: inline-block;
+    width: auto;
+  }
+  
+  .filter-container input {
+    padding: 10px;
+    font-size: 1em;
+    border-radius: 5px;
+    border: 1px solid #ddd;
+  }
