--- a/src/Pages/Daily Records/Daily Records.css
+++ b/src/Pages/Daily Records/Daily Records.css
@@ -2,13 +2,13 @@
 .home-container {
     display: flex;
   }
-  body{
+  /* body{
 background-image: url("../../Images/Group\ 2\ \(1\).png");
 background-position: center;
-background-size: 50%;
+background-size: 100%;
 background-repeat: no-repeat;
 background-color: #f1f4f3;
-  }
+  } */
   @font-face {
     font-family: Baloo-Medium;
     src: url(../../assets/Fonts/Baloo/BalooBhaina2-Medium.ttf);
