--- a/src/Components/SIdebar/Sidebar.css
+++ b/src/Components/SIdebar/Sidebar.css
@@ -34,7 +34,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    height: 85%; 
+    height: auto;
     width: 252px;
     background: #0A2525;
     color: #fff;
@@ -76,6 +76,7 @@
       transform: translateX(-100%);
       left: -59px;
       height: 100% !important;
+      z-index: 999;
     
     }
   
