--- a/src/Pages/Users/Users.css
+++ b/src/Pages/Users/Users.css
@@ -3,11 +3,11 @@
     display: flex;
   }
   body{
-    background-image: url("../../Images/Group\ 2\ \(1\).png");
+    /* background-image: url("../../Images/Group\ 2\ \(1\).png");
     background-position: center ;
     background-size: 50%;
     background-repeat: no-repeat;
-    background-color: #f1f4f3;
+    background-color: #f1f4f3; */
     
       }
   @font-face {
